# uv-python-starter

./: LICENSE  README.md  main.py  makefile  pyproject.toml
.github/workflows/: ci.yml
